complete configuration react into electron app 🔥

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "main": "src/electron/main.js",
   "scripts": {
-    "dev": "vite",
+    "dev:r": "vite",
+    "dev:e": "electron .",
     "build": "tsc -b && vite build",
     "build-test": "tsc -b && vite build && rm -rf dist-react",
     "lint": "eslint .",
@@ -25,6 +27,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "electron": "^34.3.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
