add UI component preset pack ⚙️

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "email": "gostev.dy@yandex.ru"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
