add auto sort imports and splash error screen ⚠️

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,17 @@
 {
+	"semi": true,
 	"tabWidth": 3,
 	"useTabs": true,
 	"printWidth": 100,
 	"singleQuote": true,
-	"importOrder": ["^[./]"],
 	"importOrderSeparation": true,
-	"plugins": ["prettier-plugin-tailwindcss"]
+	"plugins": ["prettier-plugin-tailwindcss", "@ianvs/prettier-plugin-sort-imports"],
+	"importOrder": [
+		"^react$",
+		"<THIRD_PARTY_MODULES>",
+		"",
+		"^@assets|@constants|@helpers|@hooks|@modules|@navigation|@services|@stores|@types|@ui$",
+		"",
+		"^[.]"
+	]
 }
