--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
 		"basic-ftp": "^5.0.5",
 		"classnames": "^2.5.1",
 		"dotenv": "^16.4.7",
+		"iconv-lite": "^0.6.3",
 		"mobx": "^6.13.6",
 		"mobx-react": "^9.2.0",
+		"papaparse": "^5.5.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hot-toast": "^2.5.2",
@@ -38,6 +40,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+		"@types/papaparse": "^5.3.15",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
