--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@heroicons/react": "^2.2.0",
 		"@tailwindcss/vite": "^4.0.9",
 		"basic-ftp": "^5.0.5",
+		"class-variance-authority": "^0.7.1",
 		"classnames": "^2.5.1",
 		"dotenv": "^16.4.7",
 		"iconv-lite": "^0.6.3",
@@ -35,6 +36,7 @@
 		"react-dom": "^19.0.0",
 		"react-hot-toast": "^2.5.2",
 		"react-router": "^7.2.0",
+		"short-unique-id": "^5.2.0",
 		"tailwindcss": "^4.0.9"
 	},
 	"devDependencies": {
