--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"papaparse": "^5.5.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
 		"react-hot-toast": "^2.5.2",
 		"react-router": "^7.2.0",
 		"short-unique-id": "^5.2.0",
