--- a/.prettierrc
+++ b/.prettierrc
@@ -2,13 +2,10 @@
 	"semi": true,
 	"tabWidth": 3,
 	"useTabs": true,
-	"printWidth": 100,
+	"printWidth": 80,
 	"singleQuote": true,
 	"importOrderSeparation": true,
-	"plugins": [
-		"prettier-plugin-tailwindcss",
-		"@ianvs/prettier-plugin-sort-imports"
-	],
+	"plugins": ["prettier-plugin-tailwindcss", "@ianvs/prettier-plugin-sort-imports"],
 	"importOrder": [
 		"^react$",
 		"<THIRD_PARTY_MODULES>",
