--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+		"@parabit/prettier": "^0.0.5",
 		"@types/papaparse": "^5.3.15",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
