successfully configured calling methods from the main process and reworked typing 🥳

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -32,10 +32,9 @@
 			"@modules/*": ["src/react/modules/*"],
 			"@services": ["src/react/services"],
 			"@stores": ["src/react/stores"],
-			"@types": ["src/react/types"],
 			"@ui": ["src/react/ui"]
 		}
 	},
-	"include": ["src"],
+	"include": ["src", "types.d.ts"],
 	"exclude": ["src/electron"]
 }
