--- a/package.json
+++ b/package.json
@@ -28,16 +28,15 @@
 		"class-variance-authority": "^0.7.1",
 		"classnames": "^2.5.1",
 		"dotenv": "^16.4.7",
-		"iconv-lite": "^0.6.3",
 		"mobx": "^6.13.6",
 		"mobx-react": "^9.2.0",
-		"papaparse": "^5.5.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-router": "^7.2.0",
 		"short-unique-id": "^5.2.0",
-		"tailwindcss": "^4.0.9"
+		"tailwindcss": "^4.0.9",
+		"udsv": "^0.7.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
