--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"react-router": "^7.2.0",
 		"short-unique-id": "^5.2.0",
 		"tailwindcss": "^4.0.9",
-		"udsv": "^0.7.1"
+		"udsv": "^0.7.1",
+		"windows-1251": "^3.0.4"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
