--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"class-variance-authority": "^0.7.1",
 		"classnames": "^2.5.1",
 		"dotenv": "^16.4.7",
+		"iconv-lite": "^0.6.3",
 		"mobx": "^6.13.6",
 		"mobx-react": "^9.2.0",
 		"react": "^19.0.0",
@@ -36,13 +37,13 @@
 		"react-router": "^7.2.0",
 		"short-unique-id": "^5.2.0",
 		"tailwindcss": "^4.0.9",
-		"udsv": "^0.7.1",
-		"windows-1251": "^3.0.4"
+		"udsv": "^0.7.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
 		"@parabit/prettier": "^0.0.5",
+		"@types/node": "^22.13.13",
 		"@types/papaparse": "^5.3.15",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
