--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
 		"dotenv": "^16.4.7",
 		"heic-convert": "^2.1.0",
 		"iconv-lite": "^0.6.3",
+		"image-size": "^2.0.1",
 		"mobx": "^6.13.6",
 		"mobx-react": "^9.2.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-router": "^7.2.0",
+		"sharp": "^0.33.5",
 		"short-unique-id": "^5.2.0",
 		"tailwindcss": "^4.0.9",
 		"udsv": "^0.7.1"
