--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"react-router": "^7.2.0",
 		"sharp": "^0.33.5",
 		"short-unique-id": "^5.2.0",
+		"swiper": "^11.2.6",
 		"tailwindcss": "^4.0.9",
 		"udsv": "^0.7.1"
 	},
